Show nearby box at top of transport page (fixes MOLLY-123)

--- a/molly/apps/places/templates/places/nearby_list.html
+++ b/molly/apps/places/templates/places/nearby_list.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
+{% if not entity %}{% include "geolocation/update_location_embed.html" %}{% endif %}
+
 {% for name, types in entity_types.items %}
 <div class="section">
 <div class="header">
