--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -12,7 +12,7 @@
 		  between the a tags {% endcomment %}
     <a href="{% url podcasts:category-medium category.slug,"audio" %}">audio</a>&nbsp;
     <a href="{% url podcasts:category-medium category.slug,"video" %}">video</a>&nbsp;
-    <a href="{% url podcasts:category category.slug %}">all</a>
+    <a href="{% url podcasts:category-medium category.slug,"all" %}">all</a>
   </div>
 		
 <ul class="link-list">
@@ -35,7 +35,14 @@
         <br style="clear:both;"/>
       </a>
     </li>
+{% empty %}
+  {% if more_in_all %}
+    <li>Sorry, there are no podcasts in your language.</li>
+  {% endif %}
 {% endfor %}
+{% if more_in_all %}
+  <li><a href="{% url podcasts:category-medium category.slug,"all" %}">View podcasts in all languages</a></li>
+{% endif %}
 </ul>
 </div>
 
