--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -37,7 +37,7 @@
     </li>
 {% empty %}
   {% if more_in_all %}
-    <li>Sorry, there are no podcasts in your language.</li>
+    <li><em>Sorry, there are no podcasts in your language.</em></li>
   {% endif %}
 {% endfor %}
 {% if more_in_all %}
