--- a/molly/apps/feeds/templates/feeds/events/index.html
+++ b/molly/apps/feeds/templates/feeds/events/index.html
@@ -35,7 +35,14 @@
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
             <a href="{{ feed.get_absolute_url }}">{{ feed.title }}</a>
         </li>
+{% empty %}
+    {% if more_in_all %}
+	<li><em>Sorry, there are no event feeds in your language.</em></li>
+    {% endif %}
 {% endfor %}
+{% if more_in_all %}
+  <li><a href="{% url events:index %}?all">View events in all languages</a></li>
+{% endif %}
     </ul>
 </div>
 
