--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -1,41 +1,75 @@
 {% extends "home/base.html" %}
+{% load i18n %}
 {% load molly_weather %}
-{% load molly_utils %}{% load molly_search %}
+{% load molly_utils %}
+{% load molly_search %}
 
-{% block site_title %}{% endblock %}
+{% comment %}
+	index.html
+	The root home page
+	
+	block list - indentation defines hierarchy 
+	==========================================
+	- site_title (the title for the front page of the site)
+	- title 
+	
+	- header
+	- content
+	  - date
+	  :: The following are using the incorrect naming convention (dashes rather than underscores)
+	  - weather-location
+	  - below-weather
+	
+	  - below_about
+{% endcomment %}
 
-{% block title %}{{ site_name }}{% endblock %}
+{% block site_title %}{% endblock site_title %}
+
+{% block title %}{{ site_name }}{% endblock title %}
 
 {% block header %}
+
+{# Displayed on the home page - contains brand mark and universal search form #}
 <div id="index-header">
+	{# Brandmark for site #}
     <div id="index-title">
+	
+		{# Display a logo (should be on white background) for featurephones: should be .jpg for compatibility #}
 		{% ifequal style_group "dumb" %}
 		    <img width="90" height="55" src="{{ STATIC_URL }}site/images/logos/logo-90x55.jpg" alt="{{ site_name }}">
 		{% else %}
-		{% if is_christmas %}
-            <img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px-christmas.png" alt="{{ site_name }}"/>
-		{% else %}
-	    <img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px.png" alt="{{ site_name }}"/>
-		{% endif %}
+		
+			{# Display a different logo at Christmas time! (non-featurephones only, as featurephones don't believe in Christmas) #}
+			{% if is_christmas %}
+	        <img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px-christmas.png" alt="{{ site_name }}"/>
+		 	{% else %}
+			{# Standard logo for non-featurephones #}
+		    <img width="128" height="51" src="{{ STATIC_URL }}site/images/logos/logo-128x51-TRMargin-5px.png" alt="{{ site_name }}"/>
+			{% endif %}
         {% endifequal %}
     </div>
+
+	{# universal search form #}
     <div id="index-search">
         {% search_form %}
 	     <form method="get" action="{% url search:index %}">
 		 <p>
 			{{ search_form.query }}
+		{# Give featurephones a simple search button #}
 		{% ifequal style_group "dumb" %}
-		    <input type="button" value="Search" />
+		    <input type="submit" value="{% trans 'Search' %}" />
 		{% else %}
-			<input type="image" src="{{ STATIC_URL }}site/images/buttons/search-button.png" title="Search" alt="Search"/>
+		{# Give non-featurephones an image search button #}
+			<input type="image" src="{{ STATIC_URL }}site/images/buttons/search-button.png" title="{% trans 'Search' %}" alt="{% trans 'Search' %}"/>
 		{% endifequal %}
 		 </p>
 		 </form>
 	</div>
 </div>
-{% endblock %}
+{% endblock header %}
 
 {% block content %}
+	{# Display messages to the user such as warnings for Opera Mini #}
     {% if messages %}
     <div class="section">
       <ul class="content-list">
@@ -45,6 +79,8 @@
       </ul>
     </div>
     {% endif %}
+
+	{# The main icon bubble for non-featurephones, access keys are defined in the view #}
     <div class="bubble">
 	<div class="center">
     	<ol class="icon-menu">
@@ -54,40 +90,45 @@
 	          </li>
 	      {% endif %}{% endfor %}
 	    </ol>
-        {# Only necessary if using floating icons #}
-        {# <div class="clearhidden"> </div> #}
     </div>
     </div>
-
+	
+	{# The a div to display various 'quick' bits of information #}
     <div class="bubble pad-5">
         <table style="width:100%; text-align:center;">
             <tbody>
                 <tr>
-                    <td style="width:50%">{% block date %}
-      {% now "l, jS F, Y" %}
-                    {% endblock %}</td>
+                    <td style="width:50%">
+					{% block date %}
+ 						{% now "l, jS F, Y" %}
+                    {% endblock date %}
+					</td>
                     <td style="width:50%; font-size:1.2em">
-
-      {% weather %}{% block weather-location %}{{ weather.name }}{% endblock %}: {{ weather.temperature }}&deg;C<img src="{{ STATIC_URL }}weather/images/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
-
+      {% weather %}{% block weather-location %}{{ weather.name }}{% endblock weather-location %}: {{ weather.temperature }}&deg;C<img src="{{ STATIC_URL }}weather/images/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
                     </td>
                 </tr>
-	{% block below-weather %}{% endblock %}
+				{% block below-weather %}{% endblock below-weather %}
             </tbody>
         </table>
     </div>
     
+	{# Display a list of favourite pages if a user has made any #}
     {% if favourites %}
     <div class="section">
       <div class="header">
-	<h2>Favourites</h2>
+		<h2>Favourites</h2>
       </div>
       <ul class="link-list">
       {% for favourite in favourites %}
-	<li class="favourite-link"><a href="{{ favourite.url }}">{{ favourite.metadata.title|safe }}
-          {% if favourite.metadata.additional %}<br /><span class="additional">{{ favourite.metadata.additional|safe }}</span>{% endif %}</a></li>
+		<li class="favourite-link">
+			<a href="{{ favourite.url }}">{{ favourite.metadata.title|safe }}
+          		{% if favourite.metadata.additional %}
+				<br /><span class="additional">{{ favourite.metadata.additional|safe }}</span>
+				{% endif %}
+			</a>
+		</li>
       {% endfor %}
-	<li><a href="{% url favourites:index %}"><strong>Manage Favourites</strong></a></li>
+		<li><a href="{% url favourites:index %}"><strong>Manage Favourites</strong></a></li>
       </ul>
     </div>
     {% endif %}
@@ -103,70 +144,8 @@
         <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">Provide feedback</a></li>
     </ul>
 
-	{% block below-about %} {% endblock %} 
+	{% block below-about %}
+	{% endblock below-about %}
 
-{% if user.is_superuser %}
-        <hr/>
-        <div class="section">
-	    <div class="header">
-		<h2>Session</h2>
-	    </div>
-	    <div class="section-content">
-		<div class="bubble pad-10">
-		    <p>{{ session }}</p>
-		</div>
-	    </div>
-        </div>
-        <hr/>
-        <div class="section">
-	    <div class="header">
-		<h2>Device</h2>
-	    </div>
-	    <div class="section-content no-round-bottom">
-		<div class="bubble pad-10">
-		    <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
-	            <p>{{ device.devua }}</p>
-	            <p>{{ ua }}</p>
-		    <p>{{ parents }}</p>
-		</div>
-	    </div>
-	    <div class="header">
-	        <h2>Browser</h2>
-	    </div>
-	    <div class="section-content">
-		<div class="bubble pad-10">
-		    <p>{{ browser.brand_name }} {{ browser.model_name }} ({{ browser.devid }})</p>
-	            <p>{{ browser.devua }}</p>
-		</div>
-	    </div>
-        </div>
-        <hr/>
-	<div class="section">
-	    <div class="header">
-	        <h2>Meta</h2>
-	    </div>
-	    <div class="section-content">
-		<div class="bubble pad-10">
-		<dl>
-		    {% for a,b in meta.items %}
-			<dt>{{ a }}</dt>
-	                <dd>{{ b }}</dd>
-		    {% endfor %}
-		</dl>
-		</div>
-            </div>
-        </div>
 
-        <div class="section">
-            <div class="header">
-                <h2>Preferences</h2>
-            </div>
-	    <div class="section-content">
-		<div class="bubble pad-10">
-		    <p>{{ preferences }}</p>
-		</div>
-	    </div>
-        </div>        
-{% endif %}
-
-{% endblock %}
+{% endblock content %}
