--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -75,7 +75,7 @@
                 {% endfor %}
             {% else %}
                 {% if not entity.metadata.real_time_information.pip_info %}
-                    <tr><td colspan="3">There is currently no departure information from this stop</td></tr>
+                    <tr><td colspan="3">There is currently no real time information from this stop</td></tr>
                 {% endif %}
             {% endif %}
         {% endfor %}
