--- a/molly/geolocation/templates/geolocation/js.html
+++ b/molly/geolocation/templates/geolocation/js.html
@@ -8,5 +8,6 @@
     </script>
   
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <script type="text/javascript" src="{% url js-i18n %}"></script>
     {% compressed_js style_group %}
 {% endif %}
