Update osm.html template to use new _ replacement for :

--- a/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/apps/places/templates/places/metadata/osm.html
@@ -1,6 +1,6 @@
 {% load molly_osm %}{% load molly_utils %}
 
-{% if entity|osm_tags or entity.metadata.osm.tags.phone or entity.metadata.osm.tags.wikipedia or entity.metadata.osm.tags.website-mobile or entity.metadata.osm.tags.website or entity.metadata.osm.tags.url %}
+{% if entity|osm_tags or entity.metadata.osm.tags.phone or entity.metadata.osm.tags.wikipedia or entity.metadata.osm.tags.website_mobile or entity.metadata.osm.tags.website or entity.metadata.osm.tags.url %}
 
 <div class="section">
   <div class="header">
@@ -35,9 +35,9 @@
           </a>
       </li>
     {% endif %}
-    {% if entity.metadata.osm.tags.website-mobile %}
+    {% if entity.metadata.osm.tags.website_mobile %}
           <li>
-              <a class="external" href="{{ entity.metadata.osm.tags.website-mobile|escape }}">
+              <a class="external" href="{{ entity.metadata.osm.tags.website_mobile|escape }}">
                   Website
               </a>
           </li>
