Move languages list from all pages, toggle if only two languages, or link to full page instead

--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -103,7 +103,7 @@
         <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">Provide feedback</a></li>
     </ul>
 
-    {% include "language_selector.html" %}
+    {% include "i18n/language_selector.html" %}
 
     {% block below-about %} {% endblock %} 
 
