--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -174,7 +174,26 @@
 				{% endif %}
 				
 				{% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
-				  <div class="full-width"><a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></div>
+				  <div><a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></div>
+				{% endif %}
+				{# If there's only two languages to switch between, show the switch here #}
+				{% if LANGUAGES|length < 3 %}
+				    <div>
+				    {% for language_code, language_name in LANGUAGES %}
+					{% if language_code != LANGUAGE_CODE %}
+					<form action="{% url set-language %}" method="post" class="has-ajax-handler">
+					    {% csrf_token %}
+					    <a><button type="submit" name="language" value="{{ language_code }}">
+						{{ language_name }}
+					    </button></a>
+					</form>
+					{% endif %}
+				    {% endfor %}
+				    </div>
+				{% else %}
+				{# Otherwise take to another page to choose language #}
+				{# This is always in English as it's a lingua franca #}
+				    <div><a href="{% url set-language %}">Change language</a></div>
 				{% endif %}
 			 	<div style="clear:both"> </div>
 			{# Give a simple list for feature phones #}
@@ -188,8 +207,6 @@
 		{% endblock bottom_links %}
 		</div>
 	{% endif %}
-
-    {% include "language_selector.html" %}
     
 </div>
 {% endblock body %}
