--- a/molly/apps/webcams/templates/webcams/webcam_detail.html
+++ b/molly/apps/webcams/templates/webcams/webcam_detail.html
@@ -25,7 +25,7 @@
     {% endifnotequal %}
 {% else %}
     <div class="note"><div class="bubble pad-10">
-        Unfortunately, this webcam is currently unavailable. Please try again later.
+        {% trans "Unfortunately, this webcam is currently unavailable. Please try again later." %}
     </div></div>
 {% endif %}
 
