--- a/molly/templates/500.html
+++ b/molly/templates/500.html
@@ -1,27 +1,28 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load i18n %}
 
 {% block scripts %}
 {% endblock %}
 
-{% block pagetitle %}Server error{% endblock %}
-{% block title %}500 Server Error{% endblock %}
+{% block pagetitle %}{% trans "Server error" %}{% endblock %}
+{% block title %}{% trans "500 Server Error" %}{% endblock %}
 
 {% block content %}
 <div class="section">
-	<h2>500 Error</h2>
-	<div class="note"><div class="bubble pad-10">
-  <p>Sorry; something went wrong at our end.</p>
-  <p>We've sent an e-mail to the webmaster, so it should be fixed soon.</p>
-  <p>If you have any further information, questions or feedback, you can e-mail us at
-      <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a>.
-  </p>
-  <p id="alt-suggest">
+    <h2>{% trans "500 Error" %}</h2>
+    <div class="note"><div class="bubble pad-10">
+    <p>{% trans "Sorry; something went wrong at our end." %}</p>
+    <p>{% trans "We've sent an e-mail to the webmaster, so it should be fixed soon." %}</p>
+    <p>{% trans "If you have any further information, questions or feedback, you can contact us using the feedback button at the bottom of the site." %}
+    </p>
+    <p id="alt-suggest">
+      {% blocktrans %}
       Alternatively, you can try <a href="{% url home:index %}">returning to the home page</a>.
-  </p>
-  <script type="text/javascript">
-      suggest = document.getElementById('alt-suggest');
-      suggest.innerHTML = 'Alternatively, you can try <a href="#" onclick="javascript:history.back(1); return false;">going back</a> or returning to the home page.';
-  </script>
-	</div></div>
+      {% endblocktrans %}
+    </p>
+    <script type="text/javascript">
+        suggest = document.getElementById('alt-suggest');
+        suggest.innerHTML = '{% blocktrans %}Alternatively, you can try <a href="#" onclick="javascript:history.back(1); return false;">going back</a> or returning to the home page.{% endblocktrans %}';
+    </script>
+    </div></div>
 </div>
 {% endblock %}
