--- a/molly/templates/static/about.html
+++ b/molly/templates/static/about.html
@@ -1,14 +1,21 @@
+{% load i18n %}
 <div class="section">
-    <h2>About this site</h2>
-
+    <h2>{% trans "About this site" %}</h2>
     <div class="note"><div class="bubble pad-10">
-    This is a Molly Project Demo site. 
+    {% trans "This is a Molly Project Demo site." %}
     </div></div>
 </div>
 
 <div class="section">
-	<h2>Be aware</h2>
-	<div class="note"><div class="bubble pad-10">
-		<p>
-			Using this site may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
-</div></div></div>
+    <h2>{% trans "Be aware" %}</h2>
+    <div class="note"><div class="bubble pad-10">
+            <p>
+	    {% blocktrans %}
+		Using this site may incur a cost of data transmission
+                from your network provider. Many providers now offer
+                "unlimited" day, week or month passes, please check with
+                your provider for more information.
+	    {% endblocktrans %}
+	    </p>
+    </div></div>
+</div>
