--- a/molly/maps/templates/maps/map_elements.html
+++ b/molly/maps/templates/maps/map_elements.html
@@ -1,13 +1,13 @@
 {% if zoom_controls %}
     {% ifnotequal zoom 10 %}
         <a class="no-icon zoom-out zoomOut" href="?zoom={{ map.zoom|add:"-1" }}" rel="nofollow">
-            <img src="{{ STATIC_URL }}site/images/icons/zoom-out.png" alt="Zoom out"/>
+            <img src="{{ STATIC_URL }}site/images/icons/zoom-out.png" alt="{% trans "Zoom out" %}"/>
         </a>
     {% endifnotequal %}
     {% ifnotequal zoom 18 %}
         <a class="no-icon zoom-in zoomIn" href="?zoom={{ map.zoom|add:"1" }}" rel="nofollow">
-            <img src="{{ STATIC_URL }}site/images/icons/zoom-in.png" alt="Zoom in"/>
+            <img src="{{ STATIC_URL }}site/images/icons/zoom-in.png" alt="{% trans "Zoom in" %}"/>
         </a>
     {% endifnotequal %}
 {% endif %}
-    <div class="osm-license">Map &copy; <a href="{% url maps:osm-about %}">OpenStreetMap</a> and contributors, CC-BY-SA</div>
+    <div class="osm-license">{% blocktrans %}Map &copy; <a href="{% url maps:osm-about %}">OpenStreetMap</a> and contributors, CC-BY-SA{% endblocktrans %}</div>
