--- a/molly/favourites/templates/favourite.html
+++ b/molly/favourites/templates/favourite.html
@@ -1,4 +1,4 @@
-{% if is_favouritable %}
+{% load i18n %}{% if is_favouritable %}
   {% ifnotequal style_group "dumb" %}
     <div id="favourite-bit">
         <form action="{% url favourites:index %}" method="post">
@@ -17,9 +17,9 @@
             <input type="hidden" name="URL" value="{{ favourite_url|escape }}" />
             {% csrf_token %}
             {% if is_favourite %}
-                <input type="submit" id="unfavourite" name="unfavourite" value="Unfavourite" />
+                <input type="submit" id="unfavourite" name="unfavourite" value="{% trans "Unfavourite" %}" />
             {% else %}
-                <input type="submit" id="favourite" name="favourite" value="Favourite" />
+                <input type="submit" id="favourite" name="favourite" value="{% trans "Favourite" %}" />
             {% endif %}
         </form>
     </div>
