--- a/molly/apps/webcams/templates/webcams/webcam_detail.html
+++ b/molly/apps/webcams/templates/webcams/webcam_detail.html
@@ -5,7 +5,7 @@
 
 
 {% comment %}
-		TODO - Stop meta refresh if JS enabled
+                TODO - Stop meta refresh if JS enabled
 {% endcomment %}
 
     <meta http-equiv="refresh" content="60" />
@@ -14,31 +14,29 @@
 {% block content %}
 
 <div class="section">
-	<div class="header">
-		<h2>{{ webcam.title }}<br /><small>{% now "G:i "%}</small></h2>
-
-{% if eis %}
-    {% ifnotequal style_group "dumb" %}
-        <div class="backgrounded-image" style="background-image:url('{{ eis.get_absolute_url }}'); height:{{ eis.height }}px;"> </div>
-      {% else %}
-        <img src="{{ eis.get_absolute_url }}" alt="Webcam Image">
-    {% endifnotequal %}
-{% else %}
-    <div class="note"><div class="bubble pad-10">
-        {% trans "Unfortunately, this webcam is currently unavailable. Please try again later." %}
-    </div></div>
-{% endif %}
-
-
-
-<div class="note"><div class="bubble pad-5">
-<p><small>{{ webcam.description }}</small></p>
-
-{% if webcam.credit %}
-<p><small>{{ webcam.credit|safe }}</small></p>
-{% endif %}
-
-</div></div>
-</div>
+    <div class="header">
+        <h2>{{ webcam.title }}<br /><small>{% now "G:i "%}</small></h2>
+        
+        {% if eis %}
+            {% ifnotequal style_group "dumb" %}
+                <div class="backgrounded-image" style="background-image:url('{{ eis.get_absolute_url }}'); height:{{ eis.height }}px;"> </div>
+              {% else %}
+                <img src="{{ eis.get_absolute_url }}" alt="{% trans "Webcam Image" %}">
+            {% endifnotequal %}
+        {% else %}
+            <div class="note"><div class="bubble pad-10">
+                {% trans "Unfortunately, this webcam is currently unavailable. Please try again later." %}
+            </div></div>
+        {% endif %}
+        
+        <div class="note"><div class="bubble pad-5">
+            <p><small>{{ webcam.description }}</small></p>
+            
+            {% if webcam.credit %}
+            <p><small>{{ webcam.credit|safe }}</small></p>
+            {% endif %}
+        </div></div>
+        
+    </div>
 </div>
 {% endblock %}
